--- a/index.html
+++ b/index.html
@@ -124,13 +124,21 @@
         <div class="sidebar-box">
           <div class="sticky-div">
             <div class="sidebar-box-ads"><img src="img/anime-ad.gif" alt="Publicidad"/></div>
-            <div class="sidebar-box-social"><a href="/"><img src="img/facebook.png" alt="Social"/><span>Facebook</span></a><a href="/"><img src="img/twitter.png" alt="Social"/><span>Twitter</span></a><a href="/"><img src="img/instagram.png" alt="Social"/><span>Instagram</span></a></div>
-            <div class="sidebar-box-banners"><a href="/"><img src="img/banner1.jpg" alt=""/>
-                <div class="banner-content"><span>Concurso de Novelas Ligeras</span></div></a><a href="/"><img src="img/banner2.jpg" alt=""/>
-                <div class="banner-content"><span>Revista Anime Sama</span></div></a><a href="/"><img src="img/banner3.jpg" alt=""/>
-                <div class="banner-content"><span>Anime Sama Radio</span></div></a></div>
-            <h3>Nuestro Equipo</h3>
-            <div class="sidebar-box-team"><a href="/"><img src="img/shingeki.jpg" alt="Social"/><span>El Onii-Sama</span></a><a href="/"><img src="img/tokyoghoul.jpg" alt="Social"/><span>Niijima</span></a><a href="/"><img src="img/realgirl.jpg" alt="Social"/><span>Judith</span></a><a href="/"><img src="img/realgirl.jpg" alt="Social"/><span>Cyan~</span></a><a href="/"><img src="img/shingeki.jpg" alt="Social"/><span>El Onii-Sama</span></a><a href="/"><img src="img/tokyoghoul.jpg" alt="Social"/><span>Niijima</span></a><a href="/"><img src="img/realgirl.jpg" alt="Social"/><span>Judith</span></a><a href="/"><img src="img/realgirl.jpg" alt="Social"/><span>Cyan~</span></a><a href="/"><img src="img/shingeki.jpg" alt="Social"/><span>El Onii-Sama</span></a><a href="/"><img src="img/tokyoghoul.jpg" alt="Social"/><span>Niijima</span></a><a href="/"><img src="img/realgirl.jpg" alt="Social"/><span>Judith</span></a><a href="/"><img src="img/realgirl.jpg" alt="Social"/><span>Cyan~</span></a><a href="/"><img src="img/shingeki.jpg" alt="Social"/><span>El Onii-Sama</span></a><a href="/"><img src="img/tokyoghoul.jpg" alt="Social"/><span>Niijima</span></a><a href="/"><img src="img/realgirl.jpg" alt="Social"/><span>Judith</span></a><a href="/"><img src="img/realgirl.jpg" alt="Social"/><span>Cyan~</span></a>
+            <div class="sidebar-box-social">
+              <h3>Redes Sociales</h3>
+              <div class="social-item"><a href="/"><img src="img/facebook.png" alt="Social"/></a><a href="/"><img src="img/twitter.png" alt="Social"/></a><a href="/"><img src="img/instagram.png" alt="Social"/></a></div>
+            </div>
+            <div class="sidebar-box-banners">
+              <h3>Nuestros Proyectos</h3>
+              <div class="banners-item"><a href="/"><img src="img/banner1.jpg" alt=""/>
+                  <div class="banner-content"><span>Concurso de Novelas Ligeras</span></div></a><a href="/"><img src="img/banner2.jpg" alt=""/>
+                  <div class="banner-content"><span>Revista Anime Sama</span></div></a><a href="/"><img src="img/banner3.jpg" alt=""/>
+                  <div class="banner-content"><span>Anime Sama Radio</span></div></a></div>
+            </div>
+            <div class="team-box">
+              <h3>Nuestro Equipo</h3>
+              <div class="sidebar-box-team"><a href="/"><img src="img/shingeki.jpg" alt="Social"/><span>El Onii-Sama</span></a><a href="/"><img src="img/tokyoghoul.jpg" alt="Social"/><span>Niijima</span></a><a href="/"><img src="img/realgirl.jpg" alt="Social"/><span>Judith</span></a><a href="/"><img src="img/realgirl.jpg" alt="Social"/><span>Cyan~</span></a><a href="/"><img src="img/shingeki.jpg" alt="Social"/><span>El Onii-Sama</span></a><a href="/"><img src="img/tokyoghoul.jpg" alt="Social"/><span>Niijima</span></a><a href="/"><img src="img/realgirl.jpg" alt="Social"/><span>Judith</span></a><a href="/"><img src="img/realgirl.jpg" alt="Social"/><span>Cyan~</span></a><a href="/"><img src="img/shingeki.jpg" alt="Social"/><span>El Onii-Sama</span></a><a href="/"><img src="img/tokyoghoul.jpg" alt="Social"/><span>Niijima</span></a><a href="/"><img src="img/realgirl.jpg" alt="Social"/><span>Judith</span></a><a href="/"><img src="img/realgirl.jpg" alt="Social"/><span>Cyan~</span></a><a href="/"><img src="img/shingeki.jpg" alt="Social"/><span>El Onii-Sama</span></a><a href="/"><img src="img/tokyoghoul.jpg" alt="Social"/><span>Niijima</span></a><a href="/"><img src="img/realgirl.jpg" alt="Social"/><span>Judith</span></a><a href="/"><img src="img/realgirl.jpg" alt="Social"/><span>Cyan~</span></a>
+              </div>
             </div>
           </div>
         </div>
