--- a/index.html
+++ b/index.html
@@ -221,28 +221,28 @@
                   <h3>¿Es S.A.O. realmente una mala historia?</h3>
                 </div>
               </div></a><a class="blog-item-second" href="/">
-              <div class="blog-item"><img class="blog-item-image" src="img/shingeki.jpg" alt=""/>
+              <div class="blog-item"><img class="blog-item-image" src="img/jojos.jpg" alt=""/>
                 <div class="post-item-content">
-                  <div class="author"><span>Por Author</span><img src="img/realgirl.jpg" alt=""/></div>
-                  <h3>Titulo de la noticia Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem, saepe!</h3>
+                  <div class="author"><span>Por Tusk</span><img src="img/jojos.jpg" alt=""/></div>
+                  <h3>Cómo el autor de Jojos definió un estilo</h3>
                 </div>
               </div></a><a class="blog-item-second" href="/">
-              <div class="blog-item"><img class="blog-item-image" src="img/shingeki.jpg" alt=""/>
+              <div class="blog-item"><img class="blog-item-image" src="img/darling.jpg" alt=""/>
                 <div class="post-item-content">
-                  <div class="author"><span>Por Author</span><img src="img/realgirl.jpg" alt=""/></div>
-                  <h3>Titulo de la noticia Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem, saepe!</h3>
+                  <div class="author"><span>Por Imouto-chan</span><img src="img/darling.jpg" alt=""/></div>
+                  <h3>Más allá de un capítulo especial</h3>
                 </div>
               </div></a><a class="blog-item-second" href="/">
-              <div class="blog-item"><img class="blog-item-image" src="img/shingeki.jpg" alt=""/>
+              <div class="blog-item"><img class="blog-item-image" src="img/fullmetal.jpg" alt=""/>
                 <div class="post-item-content">
-                  <div class="author"><span>Por Author</span><img src="img/realgirl.jpg" alt=""/></div>
-                  <h3>Titulo de la noticia Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem, saepe!</h3>
+                  <div class="author"><span>Por Niijima</span><img src="img/realgirl.jpg" alt=""/></div>
+                  <h3>La importancia de la animación en una serie</h3>
                 </div>
               </div></a><a class="blog-item-second" href="/">
-              <div class="blog-item"><img class="blog-item-image" src="img/shingeki.jpg" alt=""/>
+              <div class="blog-item"><img class="blog-item-image" src="img/evangelion.jpg" alt=""/>
                 <div class="post-item-content">
-                  <div class="author"><span>Por Author</span><img src="img/realgirl.jpg" alt=""/></div>
-                  <h3>Titulo de la noticia Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem, saepe!</h3>
+                  <div class="author"><span>Por Jair</span><img src="img/realgirl.jpg" alt=""/></div>
+                  <h3>Te explicamos cómo conectan los finales de Evangelion</h3>
                 </div>
               </div></a>
           </div>
