--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>Anime Sama | Tenemos cultura</title>
+    <!--Meta tags for Facebook-->
+    <meta property="og:url" content="https://animesama.net"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Anime Sama | Tenemos cultura"/>
+    <meta property="og:description" content="Web de entretenimiento y recomendaciones anime"/>
+    <meta property="og:image" content="https://i.imgur.com/XtwRsKx.jpg"/>
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous"/>
   </head>
