--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>Anime Sama | Tenemos cultura</title>
+    <link rel="shortcut icon" href="img/favicon.ico"/>
     <!--Meta tags for Facebook-->
     <meta property="og:url" content="https://animesama.net"/>
     <meta property="og:type" content="website"/>
